Fix chromosome parameter bug

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(refRangeTable)
 export(showPHGMethods)
 importFrom(rJava,.jarray)
 importFrom(rJava,.jcast)
+importFrom(rJava,.jnew)
 importFrom(rJava,.jnull)
 importFrom(rJava,J)
 importFrom(rJava,is.jnull)
