--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,16 @@
 export(flapjackExport)
 export(graphBuilder)
 export(hapIDMatrix)
+export(numHaploPerRange)
 export(pathMatrix)
+export(plotMutualInfo)
+export(plotNumHaplo)
 export(refRangeTable)
+export(searchRecombination)
+export(searchSimilarGametes)
 export(showPHGMethods)
+importFrom(corrplot,corrplot)
+importFrom(magrittr,"%>%")
 importFrom(rJava,.jarray)
 importFrom(rJava,.jcast)
 importFrom(rJava,.jnew)
@@ -13,4 +20,5 @@ importFrom(rJava,.jnull)
 importFrom(rJava,J)
 importFrom(rJava,is.jnull)
 importFrom(rJava,new)
+importFrom(stats,model.matrix)
 importFrom(tibble,tibble)
