--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,15 @@ export(refRangeTable)
 export(searchRecombination)
 export(searchSimilarGametes)
 export(showPHGMethods)
+exportClasses(PHGDataSet)
+importFrom(GenomicRanges,GRanges)
+importFrom(IRanges,IRanges)
+importFrom(S4Vectors,metadata)
+importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(corrplot,corrplot)
 importFrom(magrittr,"%>%")
+importFrom(methods,new)
+importFrom(methods,setClass)
 importFrom(rJava,.jarray)
 importFrom(rJava,.jcast)
 importFrom(rJava,.jnew)
