Add logging function exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(refRangeTable)
 export(searchRecombination)
 export(searchSimilarGametes)
 export(showPHGMethods)
+export(startLogger)
 exportClasses(PHGDataSet)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
