Update visualizations to coincide with new data class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,11 @@ importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(SummarizedExperiment,as.data.frame)
+importFrom(SummarizedExperiment,assays)
+importFrom(SummarizedExperiment,ranges)
+importFrom(SummarizedExperiment,rowRanges)
+importFrom(SummarizedExperiment,seqnames)
 importFrom(corrplot,corrplot)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
