--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(flapjackExport)
 export(graphBuilder)
-export(hapIDMatrix)
 export(numHaploPerRange)
 export(pathMatrix)
 export(plotMutualInfo)
@@ -13,8 +12,10 @@ export(searchSimilarGametes)
 export(showPHGMethods)
 export(startLogger)
 exportClasses(PHGDataSet)
+import(ggplot2)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
+importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,as.data.frame)
@@ -33,5 +34,7 @@ importFrom(rJava,.jnull)
 importFrom(rJava,J)
 importFrom(rJava,is.jnull)
 importFrom(rJava,new)
+importFrom(rlang,.data)
+importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(tibble,tibble)
