Add new path retrieval methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(flapjackExport)
 export(graphBuilder)
 export(numHaploPerRange)
 export(pathMatrix)
+export(pathsForMethod)
 export(plotMutualInfo)
 export(plotNumHaplo)
+export(readMappingsForLineName)
 export(refRangeTable)
 export(searchRecombination)
 export(searchSimilarGametes)
