Revert "Make SummarizedExperiment a dependent "
This reverts commit 906d1124eadd76b2990a7347688442e8fca3ea01.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,9 +60,8 @@ Imports:
     rJava,
     rlang,
     S4Vectors,
+    SummarizedExperiment,
     tibble
-Depends:
-    SummarizedExperiemtn
 Suggests:
     BiocStyle
 Encoding: UTF-8
