--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,8 +60,9 @@ Imports:
     rJava,
     rlang,
     S4Vectors,
-    SummarizedExperiment,
     tibble
+Depends:
+    SummarizedExperiment
 Suggests:
     BiocStyle
 Encoding: UTF-8
