--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(pathMatrix)
 export(pathsForMethod)
 export(plotMutualInfo)
 export(plotNumHaplo)
+export(readMappingTableInfo)
 export(readMappingsForLineName)
 export(refRangeTable)
 export(searchRecombination)
