Add json to graph parsing method and generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(graphBuilder)
 export(numHaploPerRange)
 export(pathMatrix)
 export(pathsForMethod)
+export(phGraph)
 export(plotMutualInfo)
 export(plotNumHaplo)
 export(readMappingTableInfo)
@@ -25,6 +26,7 @@ exportMethods("brapiURL<-")
 exportMethods(brapiURL)
 exportMethods(calls)
 exportMethods(callsets)
+exportMethods(phGraph)
 exportMethods(samples)
 import(ggplot2)
 importFrom(GenomicRanges,GRanges)
