--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ exportMethods(calls)
 exportMethods(callsets)
 exportMethods(phGraph)
 exportMethods(samples)
+exportMethods(show)
 import(ggplot2)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
