--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,12 @@ export(readMappingsForLineName)
 export(refRangeTable)
 export(searchRecombination)
 export(searchSimilarGametes)
+export(shinyHaploViewer)
 export(showPHGMethods)
 export(startLogger)
 exportClasses(PHGDataSet)
 import(ggplot2)
+import(shiny)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,DataFrame)
@@ -30,6 +32,10 @@ importFrom(corrplot,corrplot)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(methods,setClass)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
 importFrom(rJava,.jarray)
 importFrom(rJava,.jcast)
 importFrom(rJava,.jnew)
