Implement serverinfo methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(refRangeTable)
 export(samples)
 export(searchRecombination)
 export(searchSimilarGametes)
+export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
 exportClasses(BrapiCon)
@@ -27,6 +28,7 @@ exportMethods(calls)
 exportMethods(callsets)
 exportMethods(phGraph)
 exportMethods(samples)
+exportMethods(serverInfo)
 exportMethods(show)
 import(ggplot2)
 importFrom(GenomicRanges,GRanges)
