Add reference and studies endpoints

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,21 +15,27 @@ export(plotNumHaplo)
 export(readMappingTableInfo)
 export(readMappingsForLineName)
 export(refRangeTable)
+export(referenceSets)
+export(references)
 export(samples)
 export(searchRecombination)
 export(searchSimilarGametes)
 export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
+export(studies)
 exportClasses(BrapiCon)
 exportClasses(PHGDataSet)
 exportMethods(brapiURL)
 exportMethods(calls)
 exportMethods(callsets)
 exportMethods(phGraph)
+exportMethods(referenceSets)
+exportMethods(references)
 exportMethods(samples)
 exportMethods(serverInfo)
 exportMethods(show)
+exportMethods(studies)
 import(ggplot2)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
