Change calls to callsets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ importFrom(corrplot,corrplot)
 importFrom(curl,has_internet)
 importFrom(httr,GET)
 importFrom(httr,content)
+importFrom(igraph,graph_from_data_frame)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
