Add variantTable methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(BrapiCon)
 export(PHGMethod)
+export(availablePHGMethods)
 export(brapiURL)
 export(calls)
 export(callsets)
@@ -18,6 +19,9 @@ export(plotMutualInfo)
 export(plotNumHaplo)
 export(readMappingTableInfo)
 export(readMappingsForLineName)
+export(readRefRanges)
+export(readSamples)
+export(readTable)
 export(refRangeTable)
 export(referenceSets)
 export(references)
@@ -31,10 +35,14 @@ export(studies)
 exportClasses(BrapiCon)
 exportClasses(BrapiConPHG)
 exportClasses(PHGDataSet)
+exportMethods(availablePHGMethods)
 exportMethods(brapiURL)
 exportMethods(calls)
 exportMethods(callsets)
 exportMethods(phGraph)
+exportMethods(readRefRanges)
+exportMethods(readSamples)
+exportMethods(readTable)
 exportMethods(referenceSets)
 exportMethods(references)
 exportMethods(samples)
