--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(methods,new)
 importFrom(methods,setClass)
 importFrom(rJava,.jarray)
 importFrom(rJava,.jcast)
+importFrom(rJava,.jevalArray)
 importFrom(rJava,.jnew)
 importFrom(rJava,.jnull)
 importFrom(rJava,J)
