--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: rPHG
-Version: 0.1.11
+Version: 0.1.12
 Date: 2019-06-03
 Title: R front-end for the practical haplotype graph
 Authors@R: c(
@@ -52,6 +52,7 @@ URL:
 Imports:
     corrplot,
     curl,
+    GenomeInfoDb,
     GenomicRanges,
     ggplot2,
     httr,
@@ -74,6 +75,6 @@ Encoding: UTF-8
 LazyData: true
 VignetteBuilder:
     knitr
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 biocViews:
     GenomeWideAssociation
