--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,6 @@ export(BrapiCon)
 export(PHGMethod)
 export(availablePHGMethods)
 export(brapiURL)
-export(calls)
-export(callsets)
 export(filterRefRanges)
 export(filterSamples)
 export(flapjackExport)
@@ -14,42 +12,36 @@ export(graphBuilder)
 export(numHaploPerRange)
 export(pathMatrix)
 export(pathsForMethod)
-export(phGraph)
 export(plotMutualInfo)
 export(plotNumHaplo)
 export(readMappingTableInfo)
 export(readMappingsForLineName)
+export(readPHGDatasetFromBrapi)
 export(readRefRanges)
 export(readSamples)
 export(readTable)
 export(refRangeTable)
 export(referenceSets)
 export(references)
-export(samples)
 export(searchRecombination)
 export(searchSimilarGametes)
 export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
-export(studies)
 exportClasses(BrapiCon)
 exportClasses(BrapiConPHG)
 exportClasses(PHGDataSet)
 exportMethods(availablePHGMethods)
 exportMethods(brapiURL)
-exportMethods(calls)
-exportMethods(callsets)
-exportMethods(phGraph)
+exportMethods(readPHGDatasetFromBrapi)
 exportMethods(readRefRanges)
 exportMethods(readSamples)
 exportMethods(readTable)
 exportMethods(referenceSets)
 exportMethods(references)
-exportMethods(samples)
 exportMethods(serverInfo)
-exportMethods(show)
-exportMethods(studies)
 import(ggplot2)
+importFrom(GenomeInfoDb,dropSeqlevels)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,DataFrame)
