--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(brapiURL)
 export(filterRefRanges)
 export(filterSamples)
 export(flapjackExport)
+export(getSequencesByHapId)
+export(getSequencesByRefRange)
 export(getVTList)
 export(graphBuilder)
 export(numHaploPerRange)
@@ -33,6 +35,8 @@ exportClasses(BrapiConPHG)
 exportClasses(PHGDataSet)
 exportMethods(availablePHGMethods)
 exportMethods(brapiURL)
+exportMethods(getSequencesByHapId)
+exportMethods(getSequencesByRefRange)
 exportMethods(readPHGDatasetFromBrapi)
 exportMethods(readRefRanges)
 exportMethods(readSamples)
