Website deployment fix attempt

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,8 +47,8 @@ Description:
     for genomic selection models. This can in turn increase predictive accuracy
     and selection intensity in a breeding program.
 License: GPL-3 | file LICENSE
-URL:
-    https://bitbucket.org/bucklerlab/rphg/src/master/
+URL:https://bitbucket.org/bucklerlab/rphg/src/master/,
+    https://maize-genetics.github.io/rPHG/
 Imports:
     corrplot,
     curl,
