--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(filterRefRanges)
 export(filterSamples)
 export(getVTList)
 export(graphBuilder)
+export(gvcfMetrics)
 export(numHaploPerRange)
 export(pathMatrix)
 export(pathsForMethod)
