Add more tests for gvcf metrics and dot plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(BrapiCon)
 export(PHGMethod)
+export(anchorDotPlot)
 export(availablePHGMethods)
 export(brapiURL)
 export(filterRefRanges)
@@ -54,6 +55,15 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(SummarizedExperiment,seqnames)
 importFrom(corrplot,corrplot)
 importFrom(curl,has_internet)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_viridis_c)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
