--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,10 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,ranges)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(SummarizedExperiment,seqnames)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_done)
+importFrom(cli,cli_progress_step)
+importFrom(cli,cli_progress_update)
 importFrom(corrplot,corrplot)
 importFrom(curl,has_internet)
 importFrom(httr,GET)
@@ -62,6 +66,8 @@ importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(methods,setClass)
+importFrom(parallel,mclapply)
+importFrom(rJava,.jarray)
 importFrom(rJava,.jcall)
 importFrom(rJava,.jcast)
 importFrom(rJava,.jevalArray)
