Add path finding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(graphBuilder)
 export(numHaploPerRange)
 export(pathMatrix)
 export(pathsForMethod)
+export(plotGraph)
 export(plotMutualInfo)
 export(plotNumHaplo)
 export(readMappingTableInfo)
