--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getVTList)
 export(graphBuilder)
 export(numHaploPerRange)
 export(pathsForMethod)
+export(plotGraph)
 export(plotMutualInfo)
 export(plotNumHaplo)
 export(readMappingTableInfo)
