Update to GitHub links

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,19 @@ url: https://rphg.maizegenetics.net
 template:
   bootstrap: 5
 
+footer:
+  structure:
+    left: acknowledgment
+  components:
+    acknowledgment: <b>rPHG</b> is an R package developed by <a href="https://www.maizegenetics.net/">The Buckler Lab</a>
+
+home:
+  links:
+  - text: Report a bug
+    href: https://github.com/maize-genetics/rPHG/issues
+
+articles:
+- title: Articles
+  navbar: ~
+  contents:
+  - rphg_walkthrough
