Add filtration parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(searchSimilarGametes)
 export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
+export(taxaByNode)
 exportClasses(BrapiCon)
 exportClasses(BrapiConPHG)
 exportClasses(PHGDataSet)
@@ -60,6 +61,7 @@ importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(methods,setClass)
 importFrom(rJava,.jarray)
+importFrom(rJava,.jcall)
 importFrom(rJava,.jcast)
 importFrom(rJava,.jevalArray)
 importFrom(rJava,.jnew)
