Add documentation and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(filterSamples)
 export(getVTList)
 export(graphBuilder)
 export(numHaploPerRange)
-export(pathMatrix)
 export(pathsForMethod)
 export(plotMutualInfo)
 export(plotNumHaplo)
@@ -44,6 +43,7 @@ import(ggplot2)
 importFrom(GenomeInfoDb,dropSeqlevels)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
+importFrom(IRanges,subsetByOverlaps)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
@@ -60,7 +60,6 @@ importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(methods,setClass)
-importFrom(rJava,.jarray)
 importFrom(rJava,.jcall)
 importFrom(rJava,.jcast)
 importFrom(rJava,.jevalArray)
