--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,as.data.frame)
+importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,ranges)
 importFrom(SummarizedExperiment,rowRanges)
@@ -74,3 +75,6 @@ importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(visNetwork,visEdges)
+importFrom(visNetwork,visHierarchicalLayout)
+importFrom(visNetwork,visNetwork)
