--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(PHGMethod)
 export(PHGServerCon)
 export(brapiURL)
 export(brapiVersion)
+export(configFilePath)
+export(dbName)
+export(dbType)
 export(getVTList)
 export(graphBuilder)
 export(host)
@@ -32,7 +35,11 @@ exportClasses(PHGDataSet)
 exportClasses(PHGLocalCon)
 exportClasses(PHGServerCon)
 exportMethods(brapiURL)
+exportMethods(configFilePath)
+exportMethods(dbName)
+exportMethods(dbType)
 exportMethods(host)
+exportMethods(port)
 exportMethods(readHaplotypeIds)
 exportMethods(readPHGDataSet)
 exportMethods(readRefRanges)
