Generalize method connection objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,9 @@ export(graphBuilder)
 export(host)
 export(numHaploPerRange)
 export(pathsForMethod)
+export(phgConObj)
+export(phgMethod)
+export(phgType)
 export(plotGraph)
 export(plotMutualInfo)
 export(plotNumHaplo)
@@ -30,20 +33,22 @@ export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
 export(taxaByNode)
-exportClasses(BrapiConPHG)
+exportClasses(PHGCon)
 exportClasses(PHGDataSet)
 exportClasses(PHGLocalCon)
+exportClasses(PHGMethod)
 exportClasses(PHGServerCon)
 exportMethods(brapiURL)
+exportMethods(brapiVersion)
 exportMethods(configFilePath)
 exportMethods(dbName)
 exportMethods(dbType)
 exportMethods(host)
+exportMethods(phgConObj)
+exportMethods(phgMethod)
+exportMethods(phgType)
 exportMethods(port)
-exportMethods(readHaplotypeIds)
-exportMethods(readPHGDataSet)
 exportMethods(readRefRanges)
-exportMethods(readSamples)
 exportMethods(serverInfo)
 exportMethods(showPHGMethods)
 import(ggplot2)
@@ -59,21 +64,12 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,ranges)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(SummarizedExperiment,seqnames)
-importFrom(cli,cli_progress_bar)
-importFrom(cli,cli_progress_done)
-importFrom(cli,cli_progress_step)
-importFrom(cli,cli_progress_update)
 importFrom(corrplot,corrplot)
 importFrom(curl,has_internet)
-importFrom(httr,GET)
-importFrom(httr,content)
-importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(methods,setClass)
-importFrom(parallel,mclapply)
 importFrom(rJava,.jcall)
-importFrom(rJava,.jevalArray)
 importFrom(rJava,.jnew)
 importFrom(rJava,.jnull)
 importFrom(rJava,J)
