--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,10 @@ export(dbType)
 export(getVTList)
 export(graphBuilder)
 export(host)
+export(httProtocol)
 export(numHaploPerRange)
-export(pathsForMethod)
 export(phgConObj)
-export(phgMethod)
+export(phgMethodId)
 export(phgType)
 export(plotGraph)
 export(plotMutualInfo)
@@ -26,7 +26,6 @@ export(readMappingsForLineName)
 export(readPHGDataSet)
 export(readRefRanges)
 export(readSamples)
-export(refRangeTable)
 export(searchRecombination)
 export(searchSimilarGametes)
 export(serverInfo)
@@ -44,11 +43,15 @@ exportMethods(configFilePath)
 exportMethods(dbName)
 exportMethods(dbType)
 exportMethods(host)
+exportMethods(httProtocol)
 exportMethods(phgConObj)
-exportMethods(phgMethod)
+exportMethods(phgMethodId)
 exportMethods(phgType)
 exportMethods(port)
+exportMethods(readHaplotypeIds)
+exportMethods(readPHGDataSet)
 exportMethods(readRefRanges)
+exportMethods(readSamples)
 exportMethods(serverInfo)
 exportMethods(showPHGMethods)
 import(ggplot2)
@@ -73,7 +76,6 @@ importFrom(rJava,.jcall)
 importFrom(rJava,.jnew)
 importFrom(rJava,.jnull)
 importFrom(rJava,J)
-importFrom(rJava,is.jnull)
 importFrom(rJava,new)
 importFrom(rlang,.data)
 importFrom(stats,median)
