Update getters for multiple classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,20 +5,26 @@ export(PHGMethod)
 export(PHGServerCon)
 export(brapiURL)
 export(brapiVersion)
+export(buildPHGraph)
+export(calcMutualInfo)
 export(configFilePath)
 export(dbName)
 export(dbType)
 export(getVTList)
-export(graphBuilder)
 export(host)
 export(httProtocol)
-export(numHaploPerRange)
+export(javaMemoryAddress)
+export(javaRefObj)
+export(numHaploPerRefRange)
+export(numberOfChromosomes)
+export(numberOfNodes)
+export(numberOfRefRanges)
+export(numberOfTaxa)
 export(phgConObj)
 export(phgMethodId)
+export(phgMethodType)
 export(phgType)
 export(plotGraph)
-export(plotMutualInfo)
-export(plotNumHaplo)
 export(port)
 export(readHaplotypeIds)
 export(readMappingTableInfo)
@@ -37,15 +43,25 @@ exportClasses(PHGDataSet)
 exportClasses(PHGLocalCon)
 exportClasses(PHGMethod)
 exportClasses(PHGServerCon)
+exportClasses(PHGraph)
 exportMethods(brapiURL)
 exportMethods(brapiVersion)
+exportMethods(calcMutualInfo)
 exportMethods(configFilePath)
 exportMethods(dbName)
 exportMethods(dbType)
 exportMethods(host)
 exportMethods(httProtocol)
+exportMethods(javaMemoryAddress)
+exportMethods(javaRefObj)
+exportMethods(numHaploPerRefRange)
+exportMethods(numberOfChromosomes)
+exportMethods(numberOfNodes)
+exportMethods(numberOfRefRanges)
+exportMethods(numberOfTaxa)
 exportMethods(phgConObj)
 exportMethods(phgMethodId)
+exportMethods(phgMethodType)
 exportMethods(phgType)
 exportMethods(port)
 exportMethods(readHaplotypeIds)
@@ -54,34 +70,20 @@ exportMethods(readRefRanges)
 exportMethods(readSamples)
 exportMethods(serverInfo)
 exportMethods(showPHGMethods)
-import(ggplot2)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,subsetByOverlaps)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
-importFrom(SummarizedExperiment,SummarizedExperiment)
-importFrom(SummarizedExperiment,as.data.frame)
 importFrom(SummarizedExperiment,assay)
-importFrom(SummarizedExperiment,assays)
-importFrom(SummarizedExperiment,ranges)
 importFrom(SummarizedExperiment,rowRanges)
-importFrom(SummarizedExperiment,seqnames)
-importFrom(corrplot,corrplot)
 importFrom(curl,has_internet)
 importFrom(magrittr,"%>%")
-importFrom(methods,new)
 importFrom(methods,setClass)
 importFrom(rJava,.jcall)
 importFrom(rJava,.jnew)
-importFrom(rJava,.jnull)
 importFrom(rJava,J)
-importFrom(rJava,new)
-importFrom(rlang,.data)
-importFrom(stats,median)
-importFrom(stats,model.matrix)
 importFrom(tibble,as_tibble)
-importFrom(tibble,tibble)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visHierarchicalLayout)
 importFrom(visNetwork,visNetwork)
