Change class name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(PHGMethod)
 export(PHGServerCon)
 export(brapiURL)
 export(brapiVersion)
-export(buildPHGraph)
+export(buildHaplotypeGraph)
 export(calcMutualInfo)
 export(configFilePath)
 export(dbName)
@@ -38,12 +38,12 @@ export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
 export(taxaByNode)
+exportClasses(HaplotypeGraph)
 exportClasses(PHGCon)
 exportClasses(PHGDataSet)
 exportClasses(PHGLocalCon)
 exportClasses(PHGMethod)
 exportClasses(PHGServerCon)
-exportClasses(PHGraph)
 exportMethods(brapiURL)
 exportMethods(brapiVersion)
 exportMethods(calcMutualInfo)
