--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,13 +27,9 @@ export(phgType)
 export(plotGraph)
 export(port)
 export(readHaplotypeIds)
-export(readMappingTableInfo)
-export(readMappingsForLineName)
 export(readPHGDataSet)
 export(readRefRanges)
 export(readSamples)
-export(searchRecombination)
-export(searchSimilarGametes)
 export(serverInfo)
 export(showPHGMethods)
 export(startLogger)
@@ -63,6 +59,7 @@ exportMethods(phgConObj)
 exportMethods(phgMethodId)
 exportMethods(phgMethodType)
 exportMethods(phgType)
+exportMethods(plotGraph)
 exportMethods(port)
 exportMethods(readHaplotypeIds)
 exportMethods(readPHGDataSet)
@@ -73,17 +70,11 @@ exportMethods(showPHGMethods)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,subsetByOverlaps)
-importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
-importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(curl,has_internet)
-importFrom(magrittr,"%>%")
 importFrom(methods,setClass)
 importFrom(rJava,.jcall)
 importFrom(rJava,.jnew)
 importFrom(rJava,J)
 importFrom(tibble,as_tibble)
-importFrom(visNetwork,visEdges)
-importFrom(visNetwork,visHierarchicalLayout)
-importFrom(visNetwork,visNetwork)
