--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(calcMutualInfo)
 export(configFilePath)
 export(dbName)
 export(dbType)
-export(getVTList)
 export(host)
 export(httProtocol)
+export(isDemo)
 export(javaMemoryAddress)
 export(javaRefObj)
 export(numHaploPerRefRange)
@@ -48,6 +48,7 @@ exportMethods(dbName)
 exportMethods(dbType)
 exportMethods(host)
 exportMethods(httProtocol)
+exportMethods(isDemo)
 exportMethods(javaMemoryAddress)
 exportMethods(javaRefObj)
 exportMethods(numHaploPerRefRange)
@@ -67,14 +68,7 @@ exportMethods(readRefRanges)
 exportMethods(readSamples)
 exportMethods(serverInfo)
 exportMethods(showPHGMethods)
-importFrom(GenomicRanges,GRanges)
-importFrom(IRanges,IRanges)
-importFrom(IRanges,subsetByOverlaps)
-importFrom(S4Vectors,metadata)
-importFrom(SummarizedExperiment,rowRanges)
+exportMethods(taxaByNode)
 importFrom(curl,has_internet)
 importFrom(methods,setClass)
-importFrom(rJava,.jcall)
-importFrom(rJava,.jnew)
-importFrom(rJava,J)
 importFrom(tibble,as_tibble)
