Add press release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(phgMethodId)
 export(phgMethodType)
 export(phgType)
 export(plotGraph)
+export(plotMutualInfo)
 export(port)
 export(readHaplotypeIds)
 export(readPHGDataSet)
@@ -61,6 +62,7 @@ exportMethods(phgMethodId)
 exportMethods(phgMethodType)
 exportMethods(phgType)
 exportMethods(plotGraph)
+exportMethods(plotMutualInfo)
 exportMethods(port)
 exportMethods(readHaplotypeIds)
 exportMethods(readPHGDataSet)
