Fix CMD checks; add press release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(calcMutualInfo)
 export(configFilePath)
 export(dbName)
 export(dbType)
+export(gvcfMetrics)
 export(host)
 export(httProtocol)
 export(isDemo)
@@ -24,6 +25,7 @@ export(phgConObj)
 export(phgMethodId)
 export(phgMethodType)
 export(phgType)
+export(plotDot)
 export(plotGraph)
 export(plotMutualInfo)
 export(port)
@@ -72,5 +74,15 @@ exportMethods(serverInfo)
 exportMethods(showPHGMethods)
 exportMethods(taxaByNode)
 importFrom(curl,has_internet)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_viridis_c)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(methods,setClass)
+importFrom(rJava,.jnew)
 importFrom(tibble,as_tibble)
